# zallet-tui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  supply-chain.yml
i18n/en-US/: zallet_tui.ftl
src/: app.rs  cli.rs  client.rs  config.rs  event.rs  format.rs  i18n.rs  main.rs  qr.rs  terminal.rs  ui.rs  views.rs
src/views/: accounts.rs  addresses.rs  balances.rs  dashboard.rs  logs.rs  send.rs  transactions.rs
supply-chain/: config.toml
